--- a/package.json
+++ b/package.json
@@ -23,12 +23,17 @@
   "private": true,
   "packageManager": "npm@11.7.0",
   "dependencies": {
+    "@angular/animations": "^21.0.8",
+    "@angular/cdk": "^21.0.6",
     "@angular/common": "^21.0.0",
     "@angular/compiler": "^21.0.0",
     "@angular/core": "^21.0.0",
     "@angular/forms": "^21.0.0",
+    "@angular/material": "^21.0.6",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "dayjs": "^1.11.19",
+    "ngx-toastr": "^19.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
